--- a/src/scss/mixins/media.scss
+++ b/src/scss/mixins/media.scss
@@ -8,6 +8,11 @@
         @content;
     }
 }
+@mixin small-tablet {
+    @media (max-width: 768px) {
+        @content;
+    }
+}
 @mixin mobile{
     @media (max-width:576px) {
         @content;
