added hiro and overwiev

--- a/src/scss/base/vars.scss
+++ b/src/scss/base/vars.scss
@@ -2,30 +2,43 @@
     --neutral-10:#FFF;
     --neutral-20:#F5F5F5;
     --neutral-30:#EDEDED;
+    --neutral-40: #d9d9d9;
     --neutral-60:#18181D;
     --neutral-100:#1D1E25;
     --neutral-120:#828282;
     --neutral-130: #d9d9d9;
+    --neutral-140: #5c616f ;
+    --neutral-150: #7e8492;
+   
+    
     //logo color
     --logo-color-text:#101010;
     --logo-color-circle: #101010;
     //primary
     --primary-50:#4E7DDB;
+    --primary-60:#e2f8f0b3;
+ 
+
 
     //transtion
     --transition: all .3s;
 
     //z-index
+    --z-index--1:-1;
     --z-index-1:1;
     --z-index-2:2;
     --z-index-3:3;
     --z-index-4:4;
+
+     //border-radius
+     --border-radius:8px;
     
 
-    
     //container
     --container-padding: 15px;
     --container-width: 1200px;
+
+    //border-radius
 
 }
 
