--- a/src/scss/mixins/media.scss
+++ b/src/scss/mixins/media.scss
@@ -3,6 +3,11 @@
         @content;
     }
 }
+@mixin mini-desktop{
+    @media (max-width:1200px) {
+        @content;
+    }
+}
 @mixin tablet {
     @media (max-width: 992px) {
         @content;
