--- a/src/scss/components/home/hero.scss
+++ b/src/scss/components/home/hero.scss
@@ -60,6 +60,7 @@
   padding: 0 0 23px;
   border-bottom: 1px solid var(--neutral-40);
   background-color: transparent;
+  color: var(--neutral-100);
 }
 .hero-form {
   display: flex;
