--- a/src/scss/components/home/companies.scss
+++ b/src/scss/components/home/companies.scss
@@ -6,6 +6,7 @@
 .companies-inner {
   @include align-item-flex;
   gap: 30px;
+  max-width: 1100px;
   @include small-tablet {
     flex-direction: column;
     .companies-texts {
