--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -5,8 +5,8 @@
 
 //components
 @import "./components/header.scss";
-@import "./components/pricing/hero.scss";
-@import "./components/pricing/faq.scss";
+@import './components/contact/map.scss';
+@import './components/home/companies.scss';
 @import "./components/footer.scss"; 
 
 [data-theme="dark"] {
