fixed some links

--- a/src/html/components/contact/get-started.html
+++ b/src/html/components/contact/get-started.html
@@ -1,4 +1,4 @@
-<section class="getStarted">
+<section class="getStarted" id="getStarted">
   <div class="getStarted-container container">
     <div class="getStarted-body">
       <div class="getStarted__form-head">
