added a new page

--- a/src/html/components/pricing/hero.html
+++ b/src/html/components/pricing/hero.html
@@ -127,7 +127,7 @@
             <span>History of all Liked Photos</span>
           </li>
           <li class="hero__card-item">
-            <img src="./assets/imgs/Included.svg" alt="" />
+            <img src="  /imgs/Included.svg" alt="" />
             <span>Directory Listing</span>
           </li>
           <li class="hero__card-item hero__card-item--inaccess">
