--- a/src/scss/base/vars.scss
+++ b/src/scss/base/vars.scss
@@ -1,5 +1,5 @@
 :root{
-    --neutral-10:#FFF;
+    --neutral-10:#ffffff;
     --neutral-20:#F5F5F5;
     --neutral-30:#EDEDED;
     --neutral-40: #d9d9d9;
@@ -11,7 +11,7 @@
     --neutral-140: #5c616f ;
     --neutral-150: #7e8492;
     --neutral-160:#ced1d8;
-   
+    --neutral-180:#c2c2c254;
     
     //logo color
     --logo-color-text:#101010;
