--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -85,6 +85,8 @@
     }
     .footer-list {
       display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 5px;
     }
     .footer-nav {
       transition: var(--transition);
