forgot about build 2x :)

--- a/src/html/components/about/creators.html
+++ b/src/html/components/about/creators.html
@@ -667,7 +667,7 @@
       <div class="swiper-pagination creators-pagination"></div>
      
     </div>
-    <div class="creators-texts">
+    <div class="  ">
       <h3 class="creators__texts-tittle heading-h2">
         Join our team, The one with the master touch
       </h3>
