added broken slide:))

--- a/src/scss/updates.scss
+++ b/src/scss/updates.scss
@@ -5,7 +5,7 @@
 
 //components
 @import "./components/header.scss";
-
+@import "./components/updates/quality.scss";
 @import "./components/footer.scss"; 
 
 [data-theme="dark"] {
